--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Build with Maven
         run: mvn  -B  -PJaCoCo-coverage verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=matteociccaglione_bookkeeper
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
