--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Build with Maven
-        run: mvn  -B  -PJaCoCo-coverage verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=matteociccaglione_bookkeeper -Dsonar.organization=matteociccaglione -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn  -B   verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=matteociccaglione_bookkeeper -Dsonar.organization=matteociccaglione -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
