--- a/graptests/pom.xml
+++ b/graptests/pom.xml
@@ -9,455 +9,98 @@
 
     <name>Tests</name>
 <dependencies><dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-proto</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>tools</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>ledger</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>all</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>framework</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>perf</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>stream</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>testtools</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
+        <groupId>${project.groupId}</groupId>
         <artifactId>buildtools</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         </dependency>
     <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>stats</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-stats-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-stats-providers</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>prometheus-metrics-provider</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>codahale-metrics-provider</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>utils</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-http</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>servlet-http-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>vertx-http-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>http-server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-common</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>graptests</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
+        <groupId>${project.groupId}</groupId>
         <artifactId>circe-checksum</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         </dependency>
     <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>tests</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>bookkeeper-common</artifactId>
+        <version>${project.version}</version>
         </dependency>
     <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>docker-images</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>all-released-versions-image</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>all-versions-image</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>integration-tests-base</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>scripts</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>integration-tests-base-groovy</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>integration-tests-topologies</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>backward-compat</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>upgrade-direct</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>current-server-old-clients</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>hierarchical-ledger-manager</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>recovery-no-password</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>yahoo-custom-version</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>upgrade</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bc-non-fips</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>old-cookie-new-cluster</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>hostname-bookieid</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>shaded</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-server-tests-shaded-test</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>distributedlog-core-shaded-test</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-server-shaded-test</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>integration</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>cluster</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>standalone</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>smoke</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>integration-tests-utils</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>shaded</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>distributedlog-core-shaded</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-server-shaded</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-server-tests-shaded</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>native-io</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-dist</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>all</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bkctl</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>metadata-drivers</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>etcd</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>cpu-affinity</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bookkeeper-slogger</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>slf4j</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>microbenchmarks</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
+        <groupId>${parent.groupId}</groupId>
         <artifactId>bookkeeper-benchmark</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <version>${project.version}</version>
+    </dependency>
     <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>stream</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <groupId>${parent.groupId}</groupId>
+        <artifactId>bookkeeper-common</artifactId>
+        <version>${project.version}</version>
+    </dependency>
     <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>clients</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>java</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>all</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>kv</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>base</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>tests-common</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>proto</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>bk-grpc-name-resolver</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>storage</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>impl</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>common</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>distributedlog</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>protocol</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>core</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>common</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>io</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>dlfs</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
-        <artifactId>statelib</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
-    <dependency>
-        <groupId>org.apache.boookkeeper</groupId>
+        <groupId>${parent.groupId}</groupId>
         <artifactId>bookkeeper-common-allocator</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>bookkeeper-dist</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>bookkeeper-proto</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>bookkeeper-server</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <!--
+    <dependency>
+
+        <groupId>${project.groupId}</groupId>
+        <artifactId>bookkeeper-stats-providers</artifactId>
+        <version>${project.version}</version>
+
+    </dependency>
+    -->
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>buildtools</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>circe-checksum</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>cpu-affinity</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.bookkeeper</groupId>
+        <artifactId>microbenchmarks</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>shaded-parent</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>stream-storage-parent</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>bookkeeper-tools-parent</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+    </dependency>
     
 </dependencies>
 <build>
@@ -477,4 +120,4 @@
             </plugin>
         </plugins>
     </build>
-    
+</project>
