--- a/tests/docker-images/all-released-versions-image/pom.xml
+++ b/tests/docker-images/all-released-versions-image/pom.xml
@@ -27,7 +27,15 @@
   <name>Apache BookKeeper :: Tests :: Docker Images :: All Released Versions</name>
   <packaging>pom</packaging>
   <profiles>
-    <profile>
+
+                            <profile>
+                                <id>ba-dua</id>
+                                <properties>
+                                    <argLine>-javaagent:/home/utente/ba-dua/ba-dua-agent-rt-0.7.0-all.jar -Doutput.file=target/badua.ser</argLine>
+                                </properties>
+                            </profile>
+
+                        <profile>
       <id>docker</id>
       <activation>
         <property>
