--- a/cpu-affinity/pom.xml
+++ b/cpu-affinity/pom.xml
@@ -102,7 +102,15 @@
   </build>
 
   <profiles>
-    <profile>
+
+                            <profile>
+                                <id>ba-dua</id>
+                                <properties>
+                                    <argLine>-javaagent:/home/utente/ba-dua/ba-dua-agent-rt-0.7.0-all.jar -Doutput.file=target/badua.ser</argLine>
+                                </properties>
+                            </profile>
+
+                        <profile>
       <!-- from JDK10 javah command is not available
            see http://openjdk.java.net/jeps/313
       -->
