--- a/tests/docker-images/all-versions-image/pom.xml
+++ b/tests/docker-images/all-versions-image/pom.xml
@@ -44,7 +44,15 @@
     </dependency>
   </dependencies>
   <profiles>
-    <profile>
+
+                            <profile>
+                                <id>ba-dua</id>
+                                <properties>
+                                    <argLine>-javaagent:/home/utente/ba-dua/ba-dua-agent-rt-0.7.0-all.jar -Doutput.file=target/badua.ser</argLine>
+                                </properties>
+                            </profile>
+
+                        <profile>
       <id>docker</id>
       <activation>
         <property>
